# upmify

./: .dir-locals.el  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/upmify/cmd/: __main__.py  convert.py  extract.py  git.py  package.py  structure.py
templates/: .gitattributes  .gitignore
